Fixed spacing as well as a type in stylesheet

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+.body {
     background-color: #90EE90;
     margin: 0;
     padding: 0;
